# plataforma-aprendizaje-ia

./: Dockerfile  Procfile  experiment_report.json  index.html  script.js
backend/: .env.example  Dockerfile  backend_adaptive_system.py  config.py  docker-compose.yml  experiment_analysis.py  experiment_data.csv  experiment_report.json  experimental_data_metadata.json  pyproject.toml  requirements.txt  run.py
backend/app/: init.py  models.py
backend/app/routes/: analytics.py  experiment.py  students.py
backend/app/services/: adaptive_engine.py  experiment_tracker.py
backend/app/utils/: data_initializer.py
backend/venv312/: pyvenv.cfg
backend/venv312/Scripts/: activate  activate.bat
frontend/: index.html  styles.css
frontend/css/: styles.css
frontend/js/: script.js
